@@ -1733,7 +1733,10 @@ exec_nasl_script (struct script_infos *script_infos, const char *name,
   bzero (&ctx, sizeof (ctx));
   if (mode & NASL_ALWAYS_SIGNED)
     ctx.always_authenticated = 1;
-  ctx.kb = nvticache_get_kb ();
+  if (nvticache_initialized ())
+    ctx.kb = nvticache_get_kb ();
+  else
+    ctx.kb = plug_get_kb (script_infos);
 
   if (init_nasl_ctx (&ctx, name) == 0)
     {
